2008-08-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/commctrl.h (LVN_MARQUEEBEGIN): Define.

	Thanks to Tim Kosse <botg at users dot sf dot net>.

2008-08-22 Bo Yang <techrazy@users.sourceforge.net>

	* include/winnt.h (OWNER_SECURITY_INFORMATION, GROUP_SECURITY_INFORMATION,
	DACL_SECURITY_INFORMATION, SACL_SECURITY_INFORMATION): Correct.
	* include/winnt.h (OWNER_SECURITY_INFORMATION, GROUP_SECURITY_INFORMATION,
	DACL_SECURITY_INFORMATION, SACL_SECURITY_INFORMATION,
	LABEL_SECURITY_INFORMATION, UNPROTECTED_SACL_SECURITY_INFORMATION,
	UNPROTECTED_DACL_SECURITY_INFORMATION, PROTECTED_SACL_SECURITY_INFORMATION,
	PROTECTED_DACL_SECURITY_INFORMATION): Define.

2008-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/wtsapi32.h (_WTS_INFO_CLASS, _WTS_CONNECTSTATE_CLASS,
	WTSQuerySessionInformation, WTSFreeMemory): Define.

2008-07-25 Bo Yang <techrazy@users.sourceforge.net>

	* lib/gdi32.def (SetLayout): Export.

2008-07-25 Bo Yang <techrazy@users.sourceforge.net>

	* include/wincrypt.h  (struct _CRYPT_KEY_PROV_PARAM, 
	struct _CRYPT_KEY_PROV_INFO, CertGetCertificateContextProperty,
	CryptEnumKeyIdentifierProperties, CryptAcquireCertificatePrivateKey,
	CertCreateCertificateContext, CryptGetKeyIdentifierProperty,
	CertSetCertificateContextProperty, CertCompareCertificateName, 
	CryptSetKeyIdentifierProperty, CertOIDToAlgId, CryptGetDefaultProviderA,
	CryptGetDefaultProviderW and many corresponding macroes): Define.
	* lib/crypt32.def  (Export the above 11 functions): Export.
	* include/winerror.h  (CRYPT_E_NOT_FOUND and other crypt related
	macroes): Define.
	

2008-07-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (MENUGETOBJECTINFO, MNGO_NOINTERFACE, MNGO_NOERROR,
	MNGOF_TOPGAP, MNGOF_BOTTOMGAP): Define.

2008-07-24  techrazy  <techrazy@users.sourceforge.net>

	* include/wingdi.h (OUT_PS_ONLY_PRECIS): Define.

2008-07-24  Corinna Vinschen  <corinna@vinschen.de>
