@@ -82,7 +82,20 @@ typedef enum
     ASSOCDATA_NOACTIVATEHANDLER,
     ASSOCDATA_QUERYCLASSSTORE
 } ASSOCDATA;
-typedef DWORD ASSOCF;
+typedef enum {
+    ASSOCF_INIT_NOREMAPCLSID = 0x00000001,
+    ASSOCF_INIT_BYEXENAME = 0x00000002,
+    ASSOCF_OPEN_BYEXENAME = 0x00000002,
+    ASSOCF_INIT_DEFAULTTOSTAR = 0x00000004,
+    ASSOCF_INIT_DEFAULTTOFOLDER = 0x00000008,
+    ASSOCF_NOUSERSETTINGS = 0x00000010,
+    ASSOCF_NOTRUNCATE = 0x00000020,
+    ASSOCF_VERIFY = 0x00000040,
+    ASSOCF_REMAPRUNDLL = 0x00000080,
+    ASSOCF_NOFIXUPS = 0x00000100,
+    ASSOCF_IGNOREBASECLASS = 0x00000200,
+    ASSOCF_INIT_IGNOREUNKNOWN = 0x00000400
+} ASSOCF;
 typedef enum
 {
     SHREGDEL_DEFAULT = 0x00000000,
